# sample_deck

./: global-top.vue  package-lock.json  package.json  slides.md  style.css  vercel.json
.claude/skills/seed-deck/: SKILL.md
seed_deck_1/: package-lock.json  slides.md
zoom-scheduler/: .env.example  README.md  pyproject.toml
zoom-scheduler/src/zoom_scheduler/: auth.py  cli.py  client.py
zoom-scheduler/tests/: test_client.py
